# gtd-companion

./: .env.example  docker-compose.yml  example.gtd.toml  justfile
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs  model.rs
demo-vault/: 00-MOC.md  refresh_demo_vault_dates.py
demo-vault/People/: Walter-White.md
demo-vault/Projects/: CarWash.md  Empire.md  Family.md
demo-vault/Reference/: Gray-Matter-Technologies.md
web/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
web/public/: manifest.json
web/src/: App.css  App.tsx  index.css  index.tsx  model.ts  taskVimNav.ts
