[package]
name = "gtd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
colored = "2.0.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
walkdir = "2.3.3"
axum = {version = "0.7.2", features = ["ws"]} 
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "cors"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
base64 = "0.21.5"
color-eyre = "0.6.2"
